--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1140,6 +1140,13 @@
 	background-color:rgb(149, 149, 149,0.3);
 }
 
+.black{color:black;}
+.black:hover {
+	border-color: black;
+	color: black !important;
+	background-color:rgb(149, 149, 149,0.3);
+}
+
 .orange{color:#FF5809;}
 .orange:hover {
 	border-color: #FF5809;
