--- a/DATA/main/main.css
+++ b/DATA/main/main.css
@@ -8,14 +8,14 @@ h2{font-weight:bold;}
 .table td .table th{vertical-align:middle}
 @media (min-width: 1200px){.container {max-width: 90%;}}
 
-shp, shx, dbf, prj, cpg, qrj, sbn, sbx, csv, rdt{border-radius:15%;padding:0 3px 0 1px}
+shp, shx, dbf, prj, cpg, qrj, sbn, sbx, csv, Rdata{border-radius:15%;padding:0 3px 0 1px}
 poly, point, coord, twd, na, TWN, TPE, TNN{border-radius:10%;padding:0 3px 0 3px}
 
 .red, shp, shx, dbf, TWN {background-color:rgba(255,0,26,0.2);}
 .yellow, prj, cpg, qrj, TNN {background-color:rgba(233,168,0,0.2)}
 .gray, sbn, sbx, na {background-color:rgba(155,154,151,0.4)}
 .green, csv, twd {background-color:rgba(0,135,107,0.2)}
-.blue, rdt, poly {background-color:rgba(0,120,223,0.2)}
+.blue, Rdata, poly {background-color:rgba(0,120,223,0.2)}
 .purple, point {background-color:rgba(103,36,222,0.2)}
 .brown, coord {background-color:rgba(140,46,0,0.2)}
 .orange, TPE {background-color:rgba(245,93,0,0.2)}
