--- a/DATA/main/main.css
+++ b/DATA/main/main.css
@@ -8,11 +8,11 @@ h2{font-weight:bold;}
 .table td .table th{vertical-align:middle}
 @media (min-width: 1200px){.container {max-width: 90%;}}
 
-shp, shx, dbf, prj, cpg, qrj, sbn, sbx, csv, Rdata, xls, zip, gal{border-radius:20%;padding:0 3px 0 1px}
+shp, shx, dbf, prj, cpg, qpj, sbn, sbx, csv, Rdata, xls, zip, gal{border-radius:20%;padding:0 3px 0 1px}
 poly, point, coord, twd, crs, na, gray, TWN, TPE, TNN{border-radius:10%;padding:0 3px 0 3px}
 
 .red, shp, shx, dbf, TWN {background-color:rgba(255,0,26,0.2);}
-.yellow, prj, cpg, qrj, TNN {background-color:rgba(233,168,0,0.2)}
+.yellow, prj, cpg, qpj, TNN {background-color:rgba(233,168,0,0.2)}
 .gray, sbn, sbx, na, zip, gray, gal {background-color:rgba(155,154,151,0.4)}
 .green, csv, twd, xls {background-color:rgba(0,135,107,0.2)}
 .blue, Rdata, poly, crs {background-color:rgba(0,120,223,0.2)}
